[tool.poetry]
name = "langchaindemo"
version = "0.1.0"
description = ""
authors = ["b40yd <bb.qnyd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-deepseek = "^0.1.3"
langchain = "^0.3.24"
python-dotenv = "^1.1.0"
openai = "^1.76.0"
mcp = "^1.6.0"
openai-agents = "^0.0.12"
markdown = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
